--- a/LtcProviderData/LtcProviderData/Views/Shared/_Layout.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Create Provider", "Create", "Provider")</li>
+                    <li>@Html.ActionLink("Index of Providers", "Index", "Provider")</li>
+                    <li>@Html.ActionLink("Single Provider", "Detail", "Provider")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
