Additional Properties - Edit Error
added additional properties to all actions
edit doesnt work - nulls all fields that are not changed

--- a/LtcProviderData/LtcProviderData/Views/Provider/Create.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Provider/Create.cshtml
@@ -5,10 +5,132 @@
 
 <h2>Add New Provider</h2>
 @using (Html.BeginForm()) {
+
+
     <div>
         @Html.LabelFor(m => m.CCN)
         @Html.TextBoxFor(m => m.CCN)
         @Html.ValidationMessageFor(m => m.CCN)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.BED_CNT)
+        @Html.TextBoxFor(m => m.BED_CNT)
+        @Html.ValidationMessageFor(m => m.BED_CNT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.FAC_NAME)
+        @Html.TextBoxFor(m => m.FAC_NAME)
+        @Html.ValidationMessageFor(m => m.FAC_NAME)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ST_ADR)
+        @Html.TextBoxFor(m => m.ST_ADR)
+        @Html.ValidationMessageFor(m => m.ST_ADR)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.CITY_NAME)
+        @Html.TextBoxFor(m => m.CITY_NAME)
+        @Html.ValidationMessageFor(m => m.CITY_NAME)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ZIP_CD)
+        @Html.TextBoxFor(m => m.ZIP_CD)
+        @Html.ValidationMessageFor(m => m.ZIP_CD)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.STATE_CD)
+        @Html.TextBoxFor(m => m.STATE_CD)
+        @Html.ValidationMessageFor(m => m.STATE_CD)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.PHNE_NUM)
+        @Html.TextBoxFor(m => m.PHNE_NUM)
+        @Html.ValidationMessageFor(m => m.PHNE_NUM)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.FAX_PHNE_NUM)
+        @Html.TextBoxFor(m => m.FAX_PHNE_NUM)
+        @Html.ValidationMessageFor(m => m.FAX_PHNE_NUM)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ELGBLTY_SW)
+        @Html.TextBoxFor(m => m.ELGBLTY_SW)
+        @Html.ValidationMessageFor(m => m.ELGBLTY_SW)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.CMPLNC_STUS_CD)
+        @Html.TextBoxFor(m => m.CMPLNC_STUS_CD)
+        @Html.ValidationMessageFor(m => m.CMPLNC_STUS_CD)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ORGNL_PRTCPTN_DT)
+        @Html.TextBoxFor(m => m.ORGNL_PRTCPTN_DT)
+        @Html.ValidationMessageFor(m => m.ORGNL_PRTCPTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.CRTFCTN_DT)
+        @Html.TextBoxFor(m => m.CRTFCTN_DT)
+        @Html.ValidationMessageFor(m => m.CRTFCTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ORGNL_PRTCPTN_DT)
+        @Html.TextBoxFor(m => m.ORGNL_PRTCPTN_DT)
+        @Html.ValidationMessageFor(m => m.ORGNL_PRTCPTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.CRTFCTN_DT)
+        @Html.TextBoxFor(m => m.CRTFCTN_DT)
+        @Html.ValidationMessageFor(m => m.CRTFCTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.TRMNTN_EXPRTN_DT)
+        @Html.TextBoxFor(m => m.TRMNTN_EXPRTN_DT)
+        @Html.ValidationMessageFor(m => m.TRMNTN_EXPRTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.PGM_TRMNTN_CD)
+        @Html.TextBoxFor(m => m.PGM_TRMNTN_CD)
+        @Html.ValidationMessageFor(m => m.PGM_TRMNTN_CD)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ACRDTN_TYPE_CD)
+        @Html.TextBoxFor(m => m.ACRDTN_TYPE_CD)
+        @Html.ValidationMessageFor(m => m.ACRDTN_TYPE_CD)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ACRDTN_EFCTV_DT)
+        @Html.TextBoxFor(m => m.ACRDTN_EFCTV_DT)
+        @Html.ValidationMessageFor(m => m.ACRDTN_EFCTV_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.ACRDTN_EXPRTN_DT)
+        @Html.TextBoxFor(m => m.ACRDTN_EXPRTN_DT)
+        @Html.ValidationMessageFor(m => m.ACRDTN_EXPRTN_DT)
+    </div>
+
+    <div>
+        @Html.LabelFor(m => m.INTRMDRY_CARR_CD)
+        @Html.TextBoxFor(m => m.INTRMDRY_CARR_CD)
+        @Html.ValidationMessageFor(m => m.INTRMDRY_CARR_CD)
     </div>
 
     <div>
