--- a/LtcProviderData/LtcProviderData/Views/Provider/Index.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Provider/Index.cshtml
@@ -11,7 +11,18 @@
     <tr>
         <th>ID</th>
         <th>CCN</th>
-        <th>Comment</th>
+        <th>BED_CNT</th>
+        <th>FAC_NAME</th>
+        <th>CITY_NAME</th>
+        <th>STATE_CD</th>
+        <th>ELGBLTY_SW</th>
+        <th>CMPLNC_STUS_CD</th>
+        <th>ORGNL_PRTCPTN_DT</th>
+        <th>CRTFCTN_DT</th>
+        <th>TRMNTN_EXPRTN_DT</th>
+        
+
+        
     </tr>
     </thead>
     
@@ -21,7 +32,17 @@
             <tr>
                 <td>@ProviderIndexViewModel.ID</td>
                 <td>@ProviderIndexViewModel.CCN</td>
-                <td>@ProviderIndexViewModel.Comment</td>
+                <td>@ProviderIndexViewModel.BED_CNT</td>
+                <td>@ProviderIndexViewModel.FAC_NAME</td>
+                <td>@ProviderIndexViewModel.CITY_NAME</td>
+                <td>@ProviderIndexViewModel.STATE_CD</td>
+                <td>@ProviderIndexViewModel.ELGBLTY_SW</td>
+                <td>@ProviderIndexViewModel.CMPLNC_STUS_CD</td>
+                <td>@ProviderIndexViewModel.ORGNL_PRTCPTN_DT</td>
+                <td>@ProviderIndexViewModel.CRTFCTN_DT</td>
+                <td>@ProviderIndexViewModel.TRMNTN_EXPRTN_DT</td>
+                
+                
             </tr>
 
         }
