--- a/LtcProviderData/LtcProviderData/Views/Provider/Detail.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Provider/Detail.cshtml
@@ -15,6 +15,97 @@
 </div>
 
 <div>
+    @Html.LabelFor(m => m.BED_CNT)
+    @Model.BED_CNT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.FAC_NAME)
+    @Model.FAC_NAME
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ST_ADR)
+    @Model.ST_ADR
+</div>
+
+<div>
+    @Html.LabelFor(m => m.CITY_NAME)
+    @Model.CITY_NAME
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ZIP_CD)
+    @Model.ZIP_CD
+</div>
+
+<div>
+    @Html.LabelFor(m => m.STATE_CD)
+    @Model.STATE_CD
+</div>
+
+<div>
+    @Html.LabelFor(m => m.PHNE_NUM)
+    @Model.PHNE_NUM
+</div>
+
+<div>
+    @Html.LabelFor(m => m.FAX_PHNE_NUM)
+    @Model.FAX_PHNE_NUM
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ELGBLTY_SW)
+    @Model.ELGBLTY_SW
+</div>
+
+<div>
+    @Html.LabelFor(m => m.CMPLNC_STUS_CD)
+    @Model.CMPLNC_STUS_CD
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ORGNL_PRTCPTN_DT)
+    @Model.ORGNL_PRTCPTN_DT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.CRTFCTN_DT)
+    @Model.CRTFCTN_DT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.TRMNTN_EXPRTN_DT)
+    @Model.TRMNTN_EXPRTN_DT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.PGM_TRMNTN_CD)
+    @Model.PGM_TRMNTN_CD
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ACRDTN_TYPE_CD)
+    @Model.ACRDTN_TYPE_CD
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ACRDTN_EFCTV_DT)
+    @Model.ACRDTN_EFCTV_DT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.ACRDTN_EXPRTN_DT)
+    @Model.ACRDTN_EXPRTN_DT
+</div>
+
+<div>
+    @Html.LabelFor(m => m.INTRMDRY_CARR_CD)
+    @Model.INTRMDRY_CARR_CD
+</div>
+
+
+<div>
     @Html.LabelFor(m => m.Comment)
     @Model.Comment
 </div>
