--- a/LtcProviderData/LtcProviderData/Views/Provider/Create.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Provider/Create.cshtml
@@ -139,6 +139,6 @@
         @Html.ValidationMessageFor(m => m.Comment)
     </div>
 
-    <button type="submit">Add</button>
+    <button class="btn btn-primary" type="submit">Add</button>
 
 }
