--- a/LtcProviderData/LtcProviderData/Views/Home/Index.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Home/Index.cshtml
@@ -1,31 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET - Jumbotron</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>LTC Medicare Provider Manager</h1>
+    <p class="lead">Track Key Provider Data</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>Add A Provider</h2>
+        <p>Add a new provider to be tracked to the database. All data except for provider number (CCN) is optional!</p>
+        <p><a class="btn btn-default" href= @Url.Action("create","Provider") >Add &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Index of Providers</h2>
+        <p>Display a list of all providers with abridged data. All data may be viewed in the detail view linked in the index</p>
+        <p><a class="btn btn-default" href=@Url.Action("index","Provider")>Index &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Edit & Delete</h2>
+        <p>Edit and Delete Functions may be accessed from the Provider Detail View, accessible from the Index</p>
+        
     </div>
 </div>
