--- a/LtcProviderData/LtcProviderData/Views/Shared/_Layout.cshtml
+++ b/LtcProviderData/LtcProviderData/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Provider Manager</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,18 +17,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("LTC Provider Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Create Provider", "Create", "Provider")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Add Provider", "Create", "Provider")</li>
                     <li>@Html.ActionLink("Index of Providers", "Index", "Provider")</li>
-                    <li>@Html.ActionLink("Single Provider", "Detail", "Provider")</li>
+                    @*<li>@Html.ActionLink("Single Provider", "Detail", "Provider")</li>*@
                 </ul>
-                @Html.Partial("_LoginPartial")
+                @{ 
+                    //@Html.Partial("_LoginPartial")
+                    //login functionality not implemented at this time
+                }
             </div>
         </div>
     </div>
@@ -36,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - LTC Medicare Provider Tracker</p>
         </footer>
     </div>
 
